# hwpw

./: .gitignore  Cargo.toml
.cargo/: config.toml
endec/: Cargo.toml
endec/src/: lib.rs  tests.rs
etpwtc/: Cargo.toml
etpwtc-macros/: Cargo.toml
etpwtc-macros/src/: lib.rs
etpwtc-runtime/: Cargo.toml
etpwtc-runtime/src/: lib.rs  tests.rs
etpwtc/src/: lib.rs  tests.rs
firmware/: Cargo.toml
firmware/src/: main.rs  secrets.example.rs  usb.rs
images/: credentials-48x48.raw  lock-48x48.raw  locked-48x48-rot90.raw  locked-48x48.raw  password-48x48.raw  rotate-48x48.raw
src/: debounce.rs  display.rs  lcd.rs  main.rs  secrets.example.rs  usb.rs
