[package]
edition = "2021"
name = "firmware"
version = "1.0.0"
license = "GPL-3.0"

[profile.release]
lto = true
opt-level = "s"
incremental = false
codegen-units = 1
debug = 2

[dependencies]
embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-futures = { version = "0.1.1" }
embassy-time = { version = "0.3.1", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }

# framework deps
byte-slice-cast = { version = "1.2.0", default-features = false }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
defmt = "0.3" # could probably be removed
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# display deps
display-interface = "0.5.0"
display-interface-spi = "0.5.0"
mipidsi = "0.8.0"
embedded-graphics = "0.8.1"
embedded-hal = { version = "1.0" } # just here to use SpiDevice.write(), could probably be removed
